cmake_minimum_required(VERSION 3.28)
project(ThryveV3)

set(CMAKE_CXX_STANDARD 20)

add_executable(ThryveV3 thryve.cpp
        ThryveRenderer/VulkanBase/VulkanInstance.cpp
        ThryveRenderer/VulkanBase/VulkanInstance.h
        ThryveRenderer/VulkanBase/VulkanDevice.cpp
        ThryveRenderer/VulkanBase/VulkanDevice.h
        ThryveRenderer/VulkanBase/VulkanSwapchain.cpp
        ThryveRenderer/VulkanBase/VulkanSwapchain.h
        ThryveRenderer/VulkanBase/VulkanCommandBufferManager.cpp
        ThryveRenderer/VulkanBase/VulkanCommandBufferManager.h
        ThryveRenderer/VulkanBase/VulkanSynchronization.cpp
        ThryveRenderer/VulkanBase/VulkanSynchronization.h
        ThryveRenderer/VulkanBase/VulkanMemoryAllocator.cpp
        ThryveRenderer/VulkanBase/VulkanMemoryAllocator.h
        ThryveRenderer/VulkanBase/VulkanPipeline.cpp
        ThryveRenderer/VulkanBase/VulkanPipeline.h
        ThryveRenderer/VulkanBase/VulkanDescriptor.cpp
        ThryveRenderer/VulkanBase/VulkanDescriptor.h
        ThryveRenderer/VulkanBase/VulkanShader.cpp
        ThryveRenderer/VulkanBase/VulkanShader.h
        ThryveRenderer/VulkanBase/VulkanRenderPass.cpp
        ThryveRenderer/VulkanBase/VulkanRenderPass.h
        ThryveRenderer/Renderer/Renderer.cpp
        ThryveRenderer/Renderer/Renderer.h
        ThryveRenderer/Renderer/RenderPassManager.cpp
        ThryveRenderer/Renderer/RenderPassManager.h
        ThryveRenderer/Renderer/PipelineManager.cpp
        ThryveRenderer/Renderer/PipelineManager.h
        ThryveRenderer/SceneManagement/Scene.cpp
        ThryveRenderer/SceneManagement/Scene.h
        ThryveRenderer/SceneManagement/Camera.cpp
        ThryveRenderer/SceneManagement/Camera.h
        ThryveRenderer/SceneManagement/LightManager.cpp
        ThryveRenderer/SceneManagement/LightManager.h
        ThryveRenderer/Renderer/Material.cpp
        ThryveRenderer/Renderer/Material.h
        ThryveRenderer/ResourceManagement/Mesh.cpp
        ThryveRenderer/ResourceManagement/Mesh.h
        ThryveRenderer/ResourceManagement/ResourceManager.cpp
        ThryveRenderer/ResourceManagement/ResourceManager.h
        ThryveRenderer/Renderer/RenderTarget.cpp
        ThryveRenderer/Renderer/RenderTarget.h
        ThryveRenderer/Renderer/PostProcessing.cpp
        ThryveRenderer/Renderer/PostProcessing.h
        ThryveRenderer/Renderer/DebugRenderer.cpp
        ThryveRenderer/Renderer/DebugRenderer.h
        ThryveApp/App.cpp
        ThryveApp/App.h
        ThryveApp/Core/Window.cpp
        ThryveApp/Core/Window.h
        ThryveApp/InputManager.cpp
        ThryveApp/InputManager.h
        ThryveApp/Timer.cpp
        ThryveApp/Timer.h
        ThryveApp/EventSystem.cpp
        ThryveApp/EventSystem.h
        ThryveApp/SceneManager.cpp
        ThryveApp/SceneManager.h
        ThryveApp/ResourceLoader.cpp
        ThryveApp/ResourceLoader.h
        ThryveApp/Configuration.cpp
        ThryveApp/Configuration.h
        ThryveApp/Core/Log.cpp
        ThryveApp/Core/Log.h
        ThryveApp/ApplicationState.cpp
        ThryveApp/ApplicationState.h
        ThryveRenderer/ResourceManagement/Texture.cpp
        ThryveRenderer/ResourceManagement/Texture.h
        ThryveRenderer/SceneManagement/SceneObject.cpp
        ThryveRenderer/SceneManagement/SceneObject.h
        ThryveRenderer/SceneManagement/BoundingVolume.cpp
        ThryveRenderer/SceneManagement/BoundingVolume.h
        ThryveRenderer/ShaderManagement/ShaderManager.cpp
        ThryveRenderer/ShaderManagement/ShaderManager.h
        ThryveRenderer/ShaderManagement/Shader.cpp
        ThryveRenderer/ShaderManagement/Shader.h
        ThryveRenderer/ShaderManagement/PipelineConfig.cpp
        ThryveRenderer/ShaderManagement/PipelineConfig.h
        ThryveRenderer/VulkanBase/VulkanBuffer.cpp
        ThryveRenderer/VulkanBase/VulkanBuffer.h)
